Resolve issue with the scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@ body {
     background-image: url("../images/fond.jpg");
     background-attachment: fixed;
     background-size: 100%;
-    width: 98.9vw;
+    width: 100%;
     height: 50vw;
     background-color: rgba(0, 0, 0, 0.5);
     background-blend-mode: darken;
